fixed the funny way that stuff was showing up in the inventory
The icons have a tendency to overlap, despite setting styling, so moved to hiding/showing the div class and added some styling to the var class. Incidentally, it now also has a label next to the icon, but I think that's helpful

--- a/blog.css
+++ b/blog.css
@@ -120,4 +120,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 #torchIcon{
   padding:10px;
+  margin:10px;
+}
+
+#ironPickIcon {
+  margin:10px;
+  padding:10px;
+}
+
+var {
+  font-family: "Playfair Display";
+  font-size: small; 
+
 }
